<resources>
    <string name="app_name">Course App</string>
<!--    string activity course new-->
    <string name="simpan">Simpan</string>
    <string name="kembali">Kembali</string>
    <string name="enter_price">Enter Price</string>
    <string name="course_price">Course Price :</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="course_description">Course Description :</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="course_name">Course Name :</string>
<!--    tanpa titik 2-->
    <string name="course_description1">Course Description </string>
    <string name="course_price1">Course Price </string>
    <string name="course_name1">Course Name </string>
<!--    akhir tanpa titik 2-->
    <string name="input_course">Input New Course</string>
    <string name="input_student">Input New Student</string>
    <string name="full_name">Full Name :</string>
    <string name="your_full_name">Your full name</string>
    <string name="phone">Phone :</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="tanggal_pendaftaran">Tanggal Pendaftaran :</string>
    <string name="masukkan_tanggal_pendaftaran">Masukkan Tanggal Pendaftaran</string>
    <string name="duration">Duration :</string>
    <string name="duration_in_month">Duration in month</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="course_registration">COURSE REGISTRATION</string>
    <string name="student_name">Student Name :</string>
    <string name="student_phone">Student Phone :</string>
    <string name="start_date">Start Date :</string>
    <string name="course_duration">Course Duration :</string>

<!--    tanpa titik 2-->
    <string name="student_name1">Student Name </string>
    <string name="student_phone1">Student Phone </string>
    <string name="start_date1">Start Date </string>
    <string name="course_duration1">Course Duration</string>


    //
</resources>